[tool.poetry]
name = "quickmsg"
version = "0.1.0"
description = ""
authors = ["Artem Sitd  <tym3@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.3"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
sqlalchemy = "^2.0.30"
databases = "^0.9.0"
pydantic = "^2.7.3"
asyncpg = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
